set minimum height for toolbarsprings to prevent collapsing

--- a/chrome/fake_statusbar_w_bookmarksbar.css
+++ b/chrome/fake_statusbar_w_bookmarksbar.css
@@ -1,3 +1,4 @@
+
 /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/fake_statusbar_w_bookmarksbar.css made available under Mozilla Public License v. 2.0
 See the above repository for updates as well as full license text. */
 
@@ -22,7 +23,9 @@ See the above repository for updates as well as full license text. */
 :root:not([inFullscreen]) #browser-bottombox{
   margin-bottom: calc(5px + var(--uc-browser-base-padding)) !important;
 }
+
 #PersonalToolbar > toolbarbutton{ padding: 0 var(--toolbarbutton-outer-padding) !important; } 
+
 #PersonalToolbar > toolbarbutton > .toolbarbutton-icon,
 #PersonalToolbar > toolbarbutton > .toolbarbutton-badge-stack{
   width: var(--uc-browser-base-padding,0px) !important;
@@ -30,6 +33,7 @@ See the above repository for updates as well as full license text. */
   padding: var(--toolbarbutton-inner-padding) !important;
 }
 
+#personal-toolbar-empty + toolbarspring,
 #PersonalToolbar > :first-child + toolbarspring{
   background-position: left 4px;
   background-repeat: no-repeat;
@@ -39,7 +43,13 @@ See the above repository for updates as well as full license text. */
   flex-grow: 10;
 }
 
-#PersonalToolbar > toolbarspring{ flex-grow: 1; max-width: none !important; }
+#personal-toolbar-empty{ visibility: hidden; }
+
+#PersonalToolbar > toolbarspring{
+  flex-grow: 1;
+  max-width: none !important;
+  min-height: var(--uc-browser-base-padding) !important; 
+}
 
 /* Using -moz-element() causes some problems after Firefox has been running several hours such as long tab switch times. For this reason the background image is removed on hover and focused states which appears to clear the state. */
 #PersonalToolbar > toolbarspring:first-of-type:hover{ background-image: none }
